--- a/Assets/MenuUI/SongList.uxml
+++ b/Assets/MenuUI/SongList.uxml
@@ -2,6 +2,7 @@
     <Style src="project://database/Assets/MenuUI/MenuStyles.uss?fileID=7433441132597879392&amp;guid=4c2f0c4b16a64499b89c553c1df509df&amp;type=3#MenuStyles" />
     <ui:VisualElement>
         <ui:VisualElement style="flex-direction: row;">
+            <ui:Button text="Toggle Favorites Only" display-tooltip-when-elided="true" name="ShowFavoritesButton" />
             <ui:TextField picking-mode="Ignore" label="Song Server" value="localhost:8080" text="localhost:8080" name="ServerSetting" style="color: rgb(255, 255, 255); flex-grow: 1;" />
             <ui:Button text="Fetch Song List" display-tooltip-when-elided="true" name="FetchSongButton" style="color: rgb(255, 255, 255);" />
             <ui:Button text="Settings" display-tooltip-when-elided="true" name="SettingsButton" />
@@ -17,6 +18,7 @@
                     <ui:Button text="Advanced" display-tooltip-when-elided="true" name="Advanced" />
                     <ui:Button text="Extreme" display-tooltip-when-elided="true" name="Extreme" />
                 </ui:VisualElement>
+                <ui:Button text="FavoriteButton" display-tooltip-when-elided="true" name="FavoriteButton" />
             </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
